polkadot/xcm/procedural/tests/ui/builder_pattern.stderr
error: Expected the `Instruction` enum
 --> tests/ui/builder_pattern.rs:7:1
  |
7 | struct SomeStruct;
  | ^^^^^^^^^^^^^^^^^^
